@@ -201,10 +201,11 @@ init|=
 name|WeakIdentityMap
 operator|.
 name|newConcurrentHashMap
-argument_list|()
+argument_list|(
+literal|false
+argument_list|)
 decl_stmt|;
 DECL|method|DefaultAttributeFactory
-specifier|private
 name|DefaultAttributeFactory
 parameter_list|()
 block|{}
@@ -860,7 +861,9 @@ init|=
 name|WeakIdentityMap
 operator|.
 name|newConcurrentHashMap
-argument_list|()
+argument_list|(
+literal|false
+argument_list|)
 decl_stmt|;
 DECL|method|getAttributeInterfaces
 specifier|static
